--- a/guideTree.html
+++ b/guideTree.html
@@ -120,8 +120,8 @@
       </div>
     </div>
     <div class="booking">
-      <a href="#">Book your room</a>
-      <a href="#">Cappucino grand cafe</a>
+      <a href="#">Book Your Room</a>
+      <a href="#">Cappucino Grand Café</a>
       <a href="#">Tahini Sushi Bar</a>
       <a href="#">Palma de Mallorca city guide</a>
       <a href="#">Only for guests</a>
